--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # compiled output
 /dist
 /node_modules
+/package-lock.json
+/yarn-lock.json
 
 # Logs
 logs
@@ -33,3 +35,11 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# @env
+.env.*
+!.env.example
+/.env
+
+# data
+/pgdata/
