--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,15 @@ API_PORT=3001
 API_HOST=http://localhost
 
 TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=localhost
 TYPEORM_USERNAME=admin
 TYPEORM_PASSWORD=123456
 TYPEORM_DATABASE=nestjs
 TYPEORM_PORT=5432
+TYPEORM_SYNCHRONIZE=false
+TYPEORM_LOGGING=true
+TYPEORM_ENTITIES=../**/*.entity{.ts,.js}
+TYPEORM_MIGRATIONS=../**/migrations/*.{ts,js}
+TYPEORM_MIGRATIONS_DIR=src/migrations
+TYPEORM_MIGRATIONS_RUN=false
+TYPEORM_MIGRATIONS_TABLE_NAME=migrations
