--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "@nestjs/typeorm": "^8.0.3",
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
+    "@types/bcrypt": "^5.0.0",
     "apollo-server-express": "^3.7.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "passport": "^0.5.3",
