--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
+# Api
 API_PORT=3001
 API_HOST=http://localhost
 
+# Database
 TYPEORM_CONNECTION=postgres
 TYPEORM_HOST=localhost
 TYPEORM_USERNAME=admin
@@ -12,4 +14,14 @@ TYPEORM_LOGGING=true
 TYPEORM_MIGRATIONS_RUN=false
 TYPEORM_MIGRATIONS_TABLE_NAME=migrations
 
+# Front App
+FRONT_HOST=${API_HOST):${API_PORT}
+
+#Nodemailer
+EMAIL_SERVICE=gmail
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_HOST=smtp.example.com
+
+# Passsword module
 JWT_SECRET_KEY=nestjs-secret
