- file upload, firebase storage

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,9 @@ EMAIL_HOST=smtp.example.com
 
 # Passsword module
 JWT_SECRET_KEY=nestjs-secret
+
+# Firebase
+FIREBASE_PROJECT_ID=
+FIREBASE_PRIVATE_KEY=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_BUCKET_NAME=
