--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cookie": "^0.5.0",
+    "firebase-admin": "^10.2.0",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.7.5",
     "passport": "^0.5.3",
@@ -65,8 +67,10 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
